--- a/src/app/categories-list/categories-list.component.html
+++ b/src/app/categories-list/categories-list.component.html
@@ -6,7 +6,7 @@
   <div class="subcategory">
       <h1><a [routerLink]="['/catalog', 'Design'] | localize">Design (на 2 уровень)</a></h1>
       <ul>
-        <li> <a [routerLink]="['/catalog', 'Design', 'Design-mobile'] | localize"> Design-mobile (на 3 уровень)</a> </li>
+        <li> <a (click)="navigateTo()" [routerLink]="['/catalog', 'Design', 'Design-mobile'] | localize"> Design-mobile (на 3 уровень)</a> </li>
         <li> <a [routerLink]="['/catalog', 'Design', 'Design-web' ] | localize"> Design-web (на 3 уровень)</a> </li>
         <li> <a [routerLink]="['/catalog', 'Design', 'Design-UI'] | localize"> Design-UI (на 3 уровень)</a> </li>
       </ul>
