--- a/src/app/shared/modules/categories-header/categories-header.component.scss
+++ b/src/app/shared/modules/categories-header/categories-header.component.scss
@@ -1,4 +1,4 @@
-.category-list{
+.categorys-list{
   display: flex;
   justify-content: space-around;
   width: 100%;
@@ -9,11 +9,21 @@
 .categorie{
   margin: 0;
   padding: 0;
+  &-name{
+    font-family: "Source Sans Pro";
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+  }
 }
-ul{
-  font-family: "Source Sans Pro";
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
-  color: #FFFFFF;
+
+.subcategory-group{
+  &__name{
+    font-family: "Source Sans Pro";
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #323C47;
+  }
 }
