--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -2,31 +2,50 @@
   <h3>1. Титульная информация</h3>
   <form #form="ngForm" [formGroup]="firstStepForm" (ngSubmit)="registrate()">
     <h5>Название услуги</h5>
-    <mat-form-field floatLabel="always" class="service-title" appearance="outline" maxlength="150" ngbPopover="Оно должно отражать суть вашего предложения 
-    и описывать услугу, которую вы готовы выполнить." triggers="mouseenter:mouseleave"
-      popoverTitle="Введите название услуги" placement="right" popoverClass="popover" [closeDelay]="500">
-      <textarea #serviceTitle  formControlName="serviceTitle" matInput required></textarea>
+    <mat-form-field
+      floatLabel="always"
+      class="service-title"
+      appearance="outline"
+      maxlength="150"
+      ngbPopover="Оно должно отражать суть вашего предложения
+    и описывать услугу, которую вы готовы выполнить."
+      triggers="mouseenter:mouseleave"
+      popoverTitle="Введите название услуги"
+      placement="right"
+      popoverClass="popover"
+      closeDelay="500"
+    >
+      <textarea
+        #serviceTitle
+        formControlName="serviceTitle"
+        matInput
+        required
+      ></textarea>
 
-      <mat-hint align="end">{{serviceTitle.value.length}} / 256 максимально</mat-hint>
+      <mat-hint align="end"
+        >{{ serviceTitle.value.length }} / 256 максимально</mat-hint
+      >
     </mat-form-field>
 
     <h5>Basic mat-select</h5>
     <div class="service-category">
-      <mat-form-field appearance="outline">
-        
+      <mat-form-field appearance="outline" *ngIf="categories">
         <mat-label>Категория</mat-label>
-        <mat-select *ngIf="categoryList" formControlName="serviceCategory" [(ngModel)]="">
-          <mat-option *ngFor="let category of categoryList.category" [value]="category.id">
-            {{category.name}}
+        <mat-select matNativeControl (ngModelChange)="onFiltersChange()" formControlName="category">
+          <mat-option
+            *ngFor="let category of categories"
+            [value]="category.id"
+          >
+            {{ category.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
-
-      <!-- <mat-form-field appearance="outline">
+<!--
+      <mat-form-field appearance="outline">
         <mat-label>Подкатегория</mat-label>
         <mat-select #serviceSubCategory formControlName="serviceSubCategory">
-          <mat-option>
-            {{"example"}}
+          <mat-option >
+
           </mat-option>
         </mat-select>
       </mat-form-field> -->
