--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -54,7 +54,7 @@
           <mat-chip-list #chipList aria-label="Fruit selection">
             <mat-chip *ngFor="let tag of tags" [selectable]="selectable" color="silver"
                      [removable]="removable" (removed)="remove(tag)">
-              {{tag.name}}
+              {{tag.tag}}
               <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
             </mat-chip>
             <input
