--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/second-step-creation/second-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/second-step-creation/second-step-creation.component.html
@@ -1,37 +1,24 @@
 <div class="step-wrapper">
-  <!-- <form #form="ngForm" [formGroup]="firstStepForm" (ngSubmit)="registrate()">
+  <form #form="ngForm" [formGroup]="descriptionForm" >
     <h3>2. Описание услуги</h3>
-    <h5>Опишите услугу как можно подробнее</h5>
-    <div class="area-styling">
-      button*3
-    </div> -->
-    <!-- <mat-form-field
-      floatLabel="always"
-      class="service-title"
-      appearance="outline"
-      maxlength="70"
-      ngbPopover="Проявите оригинальность:  добавьте аргументы в свою пользу, дайте гарантии, предоставьте бонусы и т.Д. чтобы покупатель выбрал именно Вашу услугу."
-      triggers="mouseenter:mouseleave"
-      popoverTitle="Опишите услугу, которую вы предлагаете, как можно подробнее. "
-      placement="right"
-      popoverClass="popover"
-      closeDelay="200"
-    >
-      <textarea
-        #serviceTit
-        formControlName="serviceTitle"
-        matInput
-        required
-        minlength="100"
-      ></textarea>
 
-      <mat-hint align="end"
-        >{{ serviceTit.value.length }} из 100 минимум</mat-hint
-      >
-    </mat-form-field> -->
-    <!-- <div class="form-butons"> -->
-        <button class="back">сохранить и выйти</button>
-        <button class="save">сохранить и продолжить</button>
+    <h5>Опишите услугу как можно подробнее</h5>
+    <div class="form-group">
+      <label for="description"></label>
+      <quill-editor [modules]="config" [(ngModel)]="this.userService.description" formControlName="description" placeholder=""></quill-editor>
+    </div>
+    <!-- <quill-editor (onEditorCreated)="onEditorCreated($event)" [placeholder]="' '">
+      <div quill-editor-toolbar>
+        <span class="ql-formats">
+          <button class="ql-bold" [title]="'Bold'"></button>
+          <button class="ql-italic" [title]="'Italic'"></button>
+          <button class="ql-underline" [title]="'Underline'"></button>
+          <button class="ql-list" value="bullet"></button>
+        </span>
+      </div>
+    </quill-editor> -->
+        <button class="back" (click)="registrate()">сохранить и выйти</button>
+        <button class="save" >сохранить и продолжить</button>
       <!-- </div> -->
-  <!-- </form> -->
+  </form>
 </div>
